[gd_scene load_steps=4 format=3 uid="uid://bp4l8k2nmfqxk"]

[ext_resource type="Script" uid="uid://b5yq3pxgedqag" path="res://scripts/ui/main_menu.gd" id="1_menu"]
[ext_resource type="Theme" uid="uid://cs4wtbooeyalg" path="res://resources/themes/pixel_theme.tres" id="2_theme"]
[ext_resource type="FontFile" uid="uid://dsx11w01xiw4k" path="res://assets/fonts/superstar_memesbruh03.ttf" id="3_1g8jr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.15, 0.08, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_1g8jr")
theme_override_font_sizes/font_size = 32
text = "PIXEL BLACKJACK"
horizontal_alignment = 1

[node name="BalanceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 110.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_1g8jr")
text = "Balance: $1000"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1g8jr")
text = "Play"

[node name="TableSelectButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1g8jr")
text = "Select Table"

[node name="StatsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1g8jr")
text = "Statistics"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1g8jr")
text = "Quit"

[node name="TableSelectPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -150.0
offset_right = 175.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="TableSelectPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TableSelectPopup/Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("3_1g8jr")
text = "Select Table"
horizontal_alignment = 1

[node name="TableList" type="VBoxContainer" parent="TableSelectPopup/Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 50.0
offset_right = 340.0
offset_bottom = 290.0

[node name="StatsPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="StatsPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsLabel" type="RichTextLabel" parent="StatsPopup/Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 300.0
bbcode_enabled = true
text = "Statistics will appear here"

[node name="TableInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_1g8jr")
text = "Current Table: Beginner ($10-$100)"
horizontal_alignment = 1
